pkg/front_end/testcases/inference_new/infer_assign_to_property_custom.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

class A extends core::Object {
  default constructor •() → void
    : super core::Object::•()
    ;
  operator +(dynamic other) → core::int
    return 1;
  operator -(dynamic other) → core::double
    return 2.0;
}
class B extends core::Object {
  field self::A a = null;
  default constructor •() → void
    : super core::Object::•()
    ;
}
static field core::int v_prefix_pp = let final self::B #t1 = new self::B::•() in #t1.{self::B::a} = #t1.{self::B::a}.{self::A::+}(1) as{TypeError} self::A;
static field core::double v_prefix_mm = let final self::B #t2 = new self::B::•() in #t2.{self::B::a} = #t2.{self::B::a}.{self::A::-}(1) as{TypeError} self::A;
static field self::A v_postfix_pp = let final self::B #t3 = new self::B::•() in let final self::A #t4 = #t3.{self::B::a} in let final core::int #t5 = #t3.{self::B::a} = #t4.{self::A::+}(1) as{TypeError} self::A in #t4;
static field self::A v_postfix_mm = let final self::B #t6 = new self::B::•() in let final self::A #t7 = #t6.{self::B::a} in let final core::double #t8 = #t6.{self::B::a} = #t7.{self::A::-}(1) as{TypeError} self::A in #t7;
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference_new/infer_assign_to_property_custom.dart:17:65: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'test::A'.\nTry changing the type of the left hand side, or casting the right hand side to 'test::A'.\nvar /*@topType=int*/ v_prefix_pp = (++new B(). /*@target=B::a*/ a);\n                                                                ^", "pkg/front_end/testcases/inference_new/infer_assign_to_property_custom.dart:18:68: Error: A value of type 'dart.core::double' can't be assigned to a variable of type 'test::A'.\nTry changing the type of the left hand side, or casting the right hand side to 'test::A'.\nvar /*@topType=double*/ v_prefix_mm = (--new B(). /*@target=B::a*/ a);\n                                                                   ^", "pkg/front_end/testcases/inference_new/infer_assign_to_property_custom.dart:19:62: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'test::A'.\nTry changing the type of the left hand side, or casting the right hand side to 'test::A'.\nvar /*@topType=A*/ v_postfix_pp = (new B(). /*@target=B::a*/ a++);\n                                                             ^", "pkg/front_end/testcases/inference_new/infer_assign_to_property_custom.dart:20:62: Error: A value of type 'dart.core::double' can't be assigned to a variable of type 'test::A'.\nTry changing the type of the left hand side, or casting the right hand side to 'test::A'.\nvar /*@topType=A*/ v_postfix_mm = (new B(). /*@target=B::a*/ a--);\n                                                             ^"]/* from null */;
static method main() → dynamic {}
